Added database connection service to EnvironmentService.java
