# server/src/main/java/cz/plc/prx/docker/dash/api/GetDockerConnectionsApi.java
@@ -1,0 +1,32 @@
+/**
+ * NOTE: This class is auto generated by the swagger code generator program (2.2.3).
+ * https://github.com/swagger-api/swagger-codegen
+ * Do not edit the class manually.
+ */
+package cz.plc.prx.docker.dash.api;
+
+import cz.plc.prx.docker.dash.model.DockerConnection;
+
+import io.swagger.annotations.*;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+
+import java.util.List;
+
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-11-23T12:43:47.918Z")
+
+@Api(value = "getDockerConnections", description = "the getDockerConnections API")
+public interface GetDockerConnectionsApi {
+
+    @ApiOperation(value = "Get all connections", notes = "Return docker connections from mapDB", response = DockerConnection.class, responseContainer = "List", tags={ "Docker", })
+    @ApiResponses(value = {
+        @ApiResponse(code = 200, message = "successful operation", response = DockerConnection.class, responseContainer = "List"),
+        @ApiResponse(code = 400, message = "Invalid status value", response = Void.class) })
+
+    @RequestMapping(value = "/getDockerConnections",
+        produces = { "application/json" },
+        method = RequestMethod.GET)
+    ResponseEntity<List<DockerConnection>> getDockerConnections();
+
+}
